add code climate to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=fa564a5677054d2134b50ad20afa829bfa3a433212c81c63934bbbd8c17f54bf
 language: ruby
 rvm:
   - 2.5.1
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - bundle exec rspec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
